EDUPROV : Add Keywords For BDS, Dairy Technology, NEET, MBBS
Signed-off-by: thephotogenicbug <navinkumarachari@gmail.com>

--- a/bhms-course.html
+++ b/bhms-course.html
@@ -35,7 +35,9 @@
     }
     </script>
   <meta name="description" content="BHMS or Bachelor of Homeopathic Medicine and Surgery is an excellent undergraduate degree in the medical field  that covers the medical knowledge from the homeopathic medical system to train you in the system to become a homeopathic doctor after the completion of your degree at the undergraduate level.">
-  <meta name="keywords" content="medical,homoeopathic,homoeopathy,bhms,admission bhms,bhms full form,bhms course,bhms meaning,courses after bhms,bhms doctors,bhms degree,homeopathic medicine,bhms application form date,bhms full form in medical,bhms doctor,bhms course duration,bhms course details,bhms subjects,md in homoeopathy,bhms colleges,bhums admission ,neet ,bhms colleges,bhms meaning,bachelor of homeopathic medicine and surgery,bachelor of homeopathic medicine and surgery bhms,bachelor of homoeopathic medicine and surgery,bachelor of homeopathic medicine & surgery,bhms syllabus,
+  <meta name="keywords" content="bhms,bhms course,bhms meaning,courses after bhms,bhms doctors,bhms degree,bhms admission,bhms homeopathy,about bhms course,bhms years,bhms course year,bachelor of homeopathic medicine and surgery,bhms admission,bhms admission process,bhms eligibility,bhms entrance exam,
+
+
 
 
   ">
