--- a/btech-in-dairy-technology.html
+++ b/btech-in-dairy-technology.html
@@ -39,7 +39,7 @@
     <meta name="description" content="B.Tech Dairy Technology as the name suggest the course purely deals with milk processing and
     related products. Unlike other courses this course is not much popular and are not available in every college.">
     <meta name="keywords" content=" dairy technology admission, dairy technology admission 2021, dairy technology anand admission, dairy technology admission 2021 in bangalore, mafsu dairy technology admission, how to get admission in dairy technology, b.tech dairy technology admission, dairy technology college pusad admission, admission in dairy technology, dairy technology admission 2021, dairy technology engineering, dairy technology engineering diploma, dairy technology engineering salary, dairy technology engineering jobs, dairy technology engineering course, jobs for dairy technology engineering, courses for dairy technology engineering, books for dairy technology engineering, dairy technology engineering salary in india, colleges for dairy technology engineering, dairy technology engineering subjects, dairy technology engineering book admission, dairy technology engineering colleges, dairy technology engineering mcq, dairy technology engineering bangalore admission, dairy technology engineering by bangalore admission, dairy technology engineering best colleges in india, dairy technology engineering app, dairy technology engineering colleges in india, scope for dairy technology engineering, dairy technology engineering admission, dairy technology engineering in bangalore, dairy technology engineering scope, dairy technology engineering diploma jobs, dairy technology engineering bangalore, dairy technology engineering bangalore, dairy technology engineering by bangalore, dairy technology engineering admission, 
-    admission for b.tech dairy technology engineering, dairy technology engineering in india,
+    admission for b.tech dairy technology engineering, dairy technology engineering in india,btech dairy technology,btech dairy technology admission,btech dairy technology eligibility,
     
     ">
     <meta property="og:type" content="website" />
@@ -108,14 +108,14 @@
         <div class="row">
           <div class="col-md-12">
             <p class="text-justify md-2 text-dark">
-              B.Tech Dairy Technology is a very prominent field in the
+              <b>B.Tech Dairy Technology</b> is a very prominent field in the
               engineering stream. Dairy Technology has gone to improvise in its
               techniques and process along with innovation which gives an
               evaluating scheme to the candidates those who choose the stream.
             </p>
 
             <p class="text-justify text-dark">
-              B.Tech Dairy Technology is a 4-year undergraduate degree course
+              B.Tech Dairy Technology is a 4-year <b>undergraduate degree course</b>
               which studies the processing of milk and its products. It studies
               the various aspects of milk products, their production, processing
               and manufacturing of all kinds of dairy products. Dairy Technology
@@ -145,7 +145,7 @@
             </p>
 
             <p class="text-justify text-dark">
-              Dairy Technology field plays a very pivotal role in the country’s
+             <b>Dairy Technology</b> field plays a very pivotal role in the country’s
               economy and growth in agriculture. As the rapid expansion has
               given rise to huge demand for students in dairy technology sector.
               Students are given extensive training on managing heavy dairy
@@ -200,8 +200,8 @@
               </label>
 
               <ul>
-                <li>KCET</li>
-                <li>JEE Mains</li>
+                <li><a href="https://eduprov.com/kcet-exam-information.html">KCET</a></li>
+                <li><a href="https://eduprov.com/jee-exam-blog.html">JEE Mains</a></li>
                 <li>JEE Advanced</li>
                 <li>KEAM </li>
                 <li>TS Agri CET {for diploma} </li>
