--- a/jee-exam-blog.html
+++ b/jee-exam-blog.html
@@ -102,7 +102,7 @@
           <div class="row">
               <div class="col-md-12">
                   <p  class="text-justify  text-dark mt-4">
-                    <b>JEE</b> also called as Joint Entrance Examination is an engineering assessment test which is conducted for admissions in various engineering courses in top engineering colleges of India. JEE Mains is a part of two different examinations. 
+                    <b>JEE</b> also called as <b>Joint Entrance Examination</b> is an engineering assessment test which is conducted for admissions in various engineering courses in top engineering colleges of India. JEE Mains is a part of two different examinations. 
                   </p>
                   <label style="font-weight: bold;">JEE MAINS</label>
                   <label  style="font-weight: bold;">JEE ADVANCED</label>
