--- a/kcet-exam-information.html
+++ b/kcet-exam-information.html
@@ -114,17 +114,17 @@
            </div>
         </div>
         <hr/>
-        <div class="row">
+        <div class="row text-dark">
           <div class="col-md-12">
             <h2  id="tag-font" class="text-black text-center">Eligibility</h2>
           </div>
         <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">B.E / B.Tech</label>
-                <div class="card-body text-white">
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">B.E / B.Tech</label>
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                     Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply for KCET with English as one of the languages and obtained a minimum of 45% (40% for SC / ST / OBC / PwD) marks in Physics and Mathematics along with Chemistry / Biotechnology / Biology / Electronics / Computer.
                     Students should be a citizen of India and domicile of Karnataka
                 </p>
@@ -138,25 +138,25 @@
         </div>
         <div class="col-md-12">
           <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">B.Sc Agriculture</label>
-                <label  class="list-of-course-names">B.Sc Horticulture</label>
-                <label  class="list-of-course-names">B.Sc Sericulture</label>
-                <label  class="list-of-course-names">B.Sc Forestry</label>
-                <label  class="list-of-course-names">B.Tech Bio-Technology</label>
-                <label  class="list-of-course-names">B.Tech Agriculture Engineering</label>
-                <label  class="list-of-course-names">B.Tech Food Technology</label>
-                <label  class="list-of-course-names">B.Tech Dairy Technology</label>
-                <label  class="list-of-course-names">B.F.Sc</label>
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">B.Sc Agriculture</label>
+                <label  class="list-of-course-names text-dark">B.Sc Horticulture</label>
+                <label  class="list-of-course-names text-dark">B.Sc Sericulture</label>
+                <label  class="list-of-course-names text-dark">B.Sc Forestry</label>
+                <label  class="list-of-course-names text-dark">B.Tech Bio-Technology</label>
+                <label  class="list-of-course-names text-dark">B.Tech Agriculture Engineering</label>
+                <label  class="list-of-course-names text-dark">B.Tech Food Technology</label>
+                <label  class="list-of-course-names text-dark">B.Tech Dairy Technology</label>
+                <label  class="list-of-course-names text-dark">B.F.Sc</label>
               
-                <div class="card-body text-white">
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white">
+                <p class="text-justify text-dark">
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with Physics, Chemistry, Mathematics or Biology.
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
-                <label class="list-of-course-names">Admission Criteria :</label>
+                <label class="list-of-course-names text-dark">Admission Criteria :</label>
                 <label>KCET</label><br/>
                 </div>
             </div>       
@@ -164,16 +164,16 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">BVSc & AH</label>
-                <div class="card-body text-white">
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">BVSc & AH</label>
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white">
+                <p class="text-justify text-dark">
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with 50% (40% for SC / ST / OBC / PwD) marks in Physics, Chemistry, Biology and English.
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
-                <label class="list-of-course-names">Admission Criteria :</label>
+                <label class="list-of-course-names text-dark">Admission Criteria :</label>
                 <label>KCET</label><br/>
                 </div>
             </div>  
@@ -181,22 +181,22 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">B.Pharma</label>
-                <div class="card-body text-white">
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">B.Pharma</label>
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with 45% (40% for SC / ST / OBC / PwD) marks in Physics, Chemistry & Biology.
                   Passed Diploma in Pharmacy (Pharma D) exam from an institute/university approved by Pharmacy Council of India with a minimum of 45% (40% for SC / ST / OBC / PwD) marks.
                 </p>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Qualifying Pharma D is also applicable in case of lateral entry to the second year of B. Pharma.
                 </p>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
-                <label class="list-of-course-names">Admission Criteria :</label>
+                <label class="list-of-course-names text-dark">Admission Criteria :</label>
                 <label>KCET</label><br/>
                 </div>
             </div>  
@@ -204,19 +204,19 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">Pharma D</label>
-                <div class="card-body text-white">
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">Pharma D</label>
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with Physics, Chemistry, Mathematics or Biology.
                   Passed Diploma in Pharmacy (Pharma D) exam from an institute/university approved by Pharmacy Council of India.
                 </p>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
-                <label class="list-of-course-names">Admission Criteria :</label>
+                <label class="list-of-course-names text-dark">Admission Criteria :</label>
                 <label>KCET</label><br/>
                 </div>
             </div>  
@@ -224,18 +224,18 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">BArch</label>
-                <div class="card-body text-white">
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">BArch</label>
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with 50% (45% for SC / ST / OBC / PwD) marks in Physics, Chemistry and Mathematics.
                 </p>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
-                <label class="list-of-course-names">Admission Criteria :</label>
+                <label class="list-of-course-names text-dark">Admission Criteria :</label>
                 <label>KCET</label><br/>
                 </div>
             </div>  
@@ -243,18 +243,18 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-primary"  id="card-left">
-              <label  class="list-of-course-names">Eligible course</label>
-                <label  class="list-of-course-names">Naturopathy & Yoga</label>
-                <div class="card-body text-white">
+            <div class="card m-2 bg-light"  id="card-left">
+              <label  class="list-of-course-names text-dark">Eligible course</label>
+                <label  class="list-of-course-names text-dark">Naturopathy & Yoga</label>
+                <div class="card-body text-dark">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" >
+                <p class="text-justify text-dark" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with Physics, Chemistry and Biology as the major subjects.
                 </p>
-                <p class="text-justify text-white">
+                <p class="text-justify text-dark">
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
-                <label class="list-of-course-names">Admission Criteria :</label>
+                <label class="list-of-course-names text-dark">Admission Criteria :</label>
                 <label>KCET</label><br/>
                 </div>
             </div>  
