--- a/mbbs-course.html
+++ b/mbbs-course.html
@@ -36,9 +36,10 @@
     }
     </script>
   <meta name="description" content="There are many of you in that crowd of thousands and lakhs who are service-minded, who want to serve others, who want to save humanity and probably want to do something great in life. Are you one amongst them who loves to know about human body, how it functions and its systematic elements. Are you service-minded? Do you love to know about what is happening in the human body? Do you love to save a life? Then MBBS is the apt course.">
-  <meta name="keywords" content="mbbs full form,mbbs,top medical colleges in india,mbbs full form in medical,mbbs course duration,mbbs degree,mbbs course,best medical colleges in india,top indian medical colleges,mbbs admission,mbbs doctor,mbbs admission ,mbbs abroad,mbbs counselling ,mbbs course details,mbbs md,medical counselling ,private medical colleges  ,mbbs counselling,study mbbs abroad,mbbs students,mbbs abroad consultants,list of medical colleges in india,mbbs in india,mbbs colleges in india,best private medical colleges in india,best mbbs colleges in india,private medical colleges in india,mbbs seats in india,mbbs duration,mbbs syllabus india,top medical colleges in bangalore,mbbs syllabus,
+  <meta name="keywords" content="mbbs,mbbs degree,mbbs course,mbbs admission,mbbs abroad,mbbs course details,mbbs md,medical counselling ,mbbs counselling,courses after mbbs,study mbbs abroad,mbbs students,mbbs abroad consultants,mbbs eligibility,mbbs qualification,mbbs medicine,medical entrance,neet mbbs,medical courses other than mbbs,mbbs study,mbbs near me,mbbs course year,mbbs colleges near me,mbbs seats,mbbs course structure,mbbs registration,mbbs ,mbbs admission abroad,mbbs details,mbbs consultancy,study mbbs,abroad mbbs admission,
 
-  ">
+  "
+>
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bachelor of Medicine and Bachelor of Surgery Admission Guidance in Bangalore" />
   <meta property="og:url" content="https://eduprov.com/mbbs-course.html" />
