--- a/neet-exam-blog.html
+++ b/neet-exam-blog.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="canonical" href="https://eduprov.com/neet-exam-blog.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Neet Exam Blog Exam Dates College List - Eduprov</title>
   <script type="application/ld+json">
     {
@@ -110,7 +111,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" >
-            NEET also called as National Eligibility cum Entrance Test is an all India
+            <b>NEET</b> also called as <b>National Eligibility cum Entrance Test</b> is an all India
             pre medical entrance test for students who are willing to pursue any sort of
             Medical, Dental, Veterinary course and AYUSH courses pertaining to Ayurveda
             and siddha medicine. 
@@ -131,7 +132,7 @@
             states and various medical colleges. Big private institutions like AIIMS All
             India Institute of Medical Sciences and JIPMER Jawaharlal Institute of Post
             Graduate Medical Education and Research conducted their own entrance exams
-            until NEET UG became a common entrance test after the enactment of NMC Act
+            until <b>NEET UG</b> became a common entrance test after the enactment of NMC Act
             of September 2019. Now NEET is the only entrance exam which will open your
             doors to get into top medical colleges if wishing to pursue medical. 
         </p>
